<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background_angled"
    android:layout_height="match_parent"
    tools:context=".ui.learn.LearnCPlusPlusActivity">

    <ImageView
        android:id="@+id/background_logo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Another Quiz Application"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:id="@+id/textview"
        android:fontFamily="@font/aclonica"
        app:layout_constraintStart_toStartOf="@id/cardview1"
        app:layout_constraintTop_toBottomOf="@id/background_logo"/>

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#FFFFFF"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:id="@+id/cardview1"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/textview">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_profile"
                android:id="@+id/cardview1_imageview"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cardview_one_text1"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/menu_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/cardview_one_text2"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/profile_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#FFFFFF"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:id="@+id/cardview2"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/cardview1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_learn"
                android:id="@+id/imageview3"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cardiew_two_text1"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/menu_cplusplus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/cardview_two_text2"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/learn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#FFFFFF"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:id="@+id/cardview3"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/cardview2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_quizzes"
                android:id="@+id/imageview4"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/level_one_text"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/menu_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/level_one_text2"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/quiz_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/medium_bright_blue"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>


