<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background_angled"
    android:layout_height="match_parent"
    tools:context=".ui.learn.LearnCPlusPlusActivity">

    <ImageView
        android:id="@+id/background_logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#FFFFFF"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:id="@+id/cardview1"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/background_logo">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/number_one"
                android:id="@+id/imageview"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/level_one"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/level_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/medium_bright_blue"
                    android:text="@string/click_to_begin"
                    android:id="@+id/level_one_button"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#FFFFFF"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/cardview2"
        app:layout_constraintTop_toBottomOf="@id/cardview1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/number_two"
                android:id="@+id/imageview2"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/level_two"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/level_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/medium_bright_blue"
                    android:text="@string/coming_soon"
                    android:id="@+id/level_two_button"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#FFFFFF"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/cardview3"
        app:layout_constraintTop_toBottomOf="@id/cardview2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/number_three"
                android:id="@+id/imageview3"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/level_three"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/level_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/medium_bright_blue"
                    android:text="@string/coming_soon"
                    android:id="@+id/level_three_button"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#FFFFFF"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/cardview4"
        app:layout_constraintTop_toBottomOf="@id/cardview3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/number_four"
                android:id="@+id/imageview4"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/level_four"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/level_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/medium_bright_blue"
                    android:text="@string/coming_soon"
                    android:id="@+id/level_four_button"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#FFFFFF"
        android:backgroundTint="@color/light_blue"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/cardview5"
        app:layout_constraintTop_toBottomOf="@id/cardview4">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/number_five"
                android:id="@+id/imageview5"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/level_five"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/amaranth"
                    android:text="@string/level_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/medium_bright_blue"
                    android:text="@string/coming_soon"
                    android:id="@+id/level_five_button"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/medium_bright_blue"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>


